# Project-JARMS

./: .gitignore  Project-JARMS.code-workspace  README.md
STT_Alibaba/: captioner.py  create_audio.py  main.py  pyproject.toml  triage_protocol.md
STT_Alibaba/outputs/: elderly_fall_scenario.json
backend/: .env  README.md  main.py  policy.json  pyproject.toml
backend/core/: queue.py  settings.py  supabase.py
backend/routers/: case_events.py  cases.py  nurse_bot.py
backend/services/: asr.py  captioner.py
backend/services/nurse_bot/: orchestrator.py  prompts.py  tools.py  trigger_flow.py
backend/services/triage/: pureadio.py  run_triage.py  stt_triage.py
backend/test/: test_pab.py
frontend/: .env  .env.example  README.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/AlertDetail/: AlertDetail.css  AlertDetail.jsx
frontend/src/components/AlertList/: AlertList.css  AlertList.jsx
frontend/src/components/Header/: Header.css  Header.jsx
frontend/src/components/StatsBar/: StatsBar.css  StatsBar.jsx
frontend/src/hooks/: useAlertWebSocket.js  useAlerts.js
frontend/src/pages/: AlertButton.css  AlertButton.jsx  Dashboard.css  Dashboard.jsx  Login.jsx
frontend/src/services/: supabaseClient.js
frontend/src/store/: alertsSlice.js  index.js
